First step to remove dependencies to muContext model